[gd_scene load_steps=20 format=2]

[ext_resource path="res://Scenes/Player/Weapon/FSM/Shooting.gd" type="Script" id=1]
[ext_resource path="res://Textures/FX/muzzle_01.png" type="Texture" id=2]
[ext_resource path="res://Textures/FX/trace_06.png" type="Texture" id=3]
[ext_resource path="res://Textures/FX/star_01.png" type="Texture" id=4]
[ext_resource path="res://Sounds/ShootLoop.wav" type="AudioStream" id=5]

[sub_resource type="Animation" id=1]
resource_name = "BangBang"
length = 5.0

[sub_resource type="CylinderMesh" id=2]
height = 1.0

[sub_resource type="SpatialMaterial" id=3]
flags_unshaded = true
params_blend_mode = 1

[sub_resource type="SpatialMaterial" id=4]
flags_unshaded = true
params_blend_mode = 1
albedo_color = Color( 1.5, 1.8, 2, 1 )
albedo_texture = ExtResource( 4 )

[sub_resource type="QuadMesh" id=5]
material = SubResource( 4 )

[sub_resource type="QuadMesh" id=6]

[sub_resource type="SpatialMaterial" id=7]
flags_unshaded = true
params_blend_mode = 1
albedo_color = Color( 0.96, 1.15, 1.28, 1 )
albedo_texture = ExtResource( 2 )

[sub_resource type="Gradient" id=9]
offsets = PoolRealArray( 0, 0.997555 )
colors = PoolColorArray( 1, 1, 1, 1, 0, 0, 0, 1 )

[sub_resource type="GradientTexture" id=8]
gradient = SubResource( 9 )

[sub_resource type="Curve" id=10]
_data = [ Vector2( 0, 1 ), 0.0, 0.364437, 0, 0, Vector2( 0.481481, 0.994318 ), 0.0, 0.0, 0, 0, Vector2( 0.990741, 0.857955 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=11]
curve = SubResource( 10 )

[sub_resource type="ParticlesMaterial" id=12]
lifetime_randomness = 1.0
emission_shape = 1
emission_sphere_radius = 1.0
flag_align_y = true
flag_disable_z = true
spread = 70.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 200.0
initial_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 500.0
damping_random = 1.0
scale = 15.0
scale_random = 1.0
scale_curve = SubResource( 11 )
color_ramp = SubResource( 8 )

[sub_resource type="SpatialMaterial" id=13]
flags_unshaded = true
vertex_color_use_as_albedo = true
params_blend_mode = 1
params_cull_mode = 2
albedo_color = Color( 1.4, 1.8, 2, 1 )
albedo_texture = ExtResource( 3 )

[sub_resource type="QuadMesh" id=14]
material = SubResource( 13 )
size = Vector2( 0.3, 0.6 )

[node name="Shooting" type="Spatial"]
script = ExtResource( 1 )

[node name="AudioLaserLoop" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
bus = "SFX"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "BangBang"
anims/BangBang = SubResource( 1 )

[node name="LaserOrigin" type="Spatial" parent="."]

[node name="LaserBeam" type="Spatial" parent="LaserOrigin"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 10 )

[node name="Cylinder" type="MeshInstance" parent="LaserOrigin/LaserBeam"]
transform = Transform( -4.37114e-08, -1, 4.37114e-08, 0, -4.37114e-08, -1, 1, -4.37114e-08, 1.91069e-15, 0.5, 0, 0 )
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="HitIndicator" type="Spatial" parent="LaserOrigin"]

[node name="Sprite" type="MeshInstance" parent="LaserOrigin/HitIndicator"]
transform = Transform( 40, 0, 0, 0, 40, 0, 0, 0, 40, 0, 0, 10 )
mesh = SubResource( 5 )
material/0 = null

[node name="MuzzleRoot" type="Spatial" parent="LaserOrigin"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 7 )

[node name="Muzzle" type="MeshInstance" parent="LaserOrigin/MuzzleRoot"]
transform = Transform( -1.5299e-06, 35, 0, -35, -1.5299e-06, 0, 0, 0, 35, 12.33, 0, 0 )
mesh = SubResource( 6 )
material/0 = SubResource( 7 )

[node name="RayCast" type="RayCast" parent="LaserOrigin"]
enabled = true
cast_to = Vector3( 5000, 0, 0 )
collision_mask = 5

[node name="MuzzleParticles" type="Particles" parent="LaserOrigin"]
amount = 100
lifetime = 0.2
local_coords = false
process_material = SubResource( 12 )
draw_pass_1 = SubResource( 14 )
